fix: fix horiz scrollbar
by using hidden, we will not allow scrolling right/left

--- a/src/components/catalogs/styles/_enterprise_catalogs.scss
+++ b/src/components/catalogs/styles/_enterprise_catalogs.scss
@@ -6,6 +6,7 @@
 
 .full-body {
   padding: 0px !important;
+  overflow-x: hidden; /* avoid horizontal scrollbar */
 }
 
 .padded-body {
